test/good/nullables/op16.px

a = [[], null]
print a[0]?.length
print a[1]?[0] ?? ['x']
