test/bad/nullables/op08.px

Char? c = 'c'
c?[0]
